%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.14.1 (2017-07-07)}{

\subsection{BUG FIXES}{
  \itemize{
    \item The C-routines introduced in version 1.14.0 used \code{==}
    comparisons on parameter values to choose among case-specific
    formulae (e.g., for \eqn{d==2} in \code{siaf.powerlaw()}).
    We now employ an absolute tolerance of 1e-7 (which hopefully fixes
    the failing tests on Solaris).
  }
}

}


\section{Changes in surveillance version 1.14.0 (2017-06-29)}{

\subsection{DOCUMENTATION}{
  \itemize{
    \item The replication code from Meyer et al. (2017, JSS)
    is now included as \code{demo("v77i11")}.
    It exemplifies the spatio-temporal endemic-epidemic modelling
    frameworks \code{twinstim}, \code{twinSIR}, and \code{hhh4}
    (see also the corresponding vignettes).
  }
}

\subsection{NEW FEATURES}{
  \itemize{
    \item Pure C-implementations of integration routines for spatial
    interaction functions considerably accelerate the estimation of
    \code{twinstim()} models containing
    \code{siaf.powerlaw()}, \code{siaf.powerlawL()}, or \code{siaf.student()}.

    \item The color palette generating function used by \code{sts}
    plots, \code{hcl.colors}, is now exported.
    
    \item The utility function \code{clapply} (\emph{c}onditional
    \code{lapply}) is now exported.

    \item Some utility functions for \code{hhh4} fits are now exported
    (\code{update.hhh4}, \code{getNEweights}, \code{coefW}),
    as well as several internal functions for use by \code{hhh4} add-on
    packages (\code{meanHHH}, \code{sizeHHH}, \code{decompose.hhh4}).

    \item The \code{"fan"}-type plot function for \code{"hhh4sims"}